# game_project

./: pyproject.toml
app/: app.py
app/config/: config.ini  config.py
app/game/: game.py
app/player/: player.py
app/protocols/: config.py  entity.py  game.py  scene.py
app/scene/: scene.py
app/scenes/: config.py  game.py  game_over.py  start.py
