[tool.poetry]
name = "game-project"
version = "0.1.0"
description = ""
authors = ["Rodrigo Cristiano <rcristianofv@hotmail.com>"]
readme = "README.md"
packages = [{include = "game_project"}]

[tool.poetry.dependencies]
python = "^3.11"
pygame = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
